Fix switch labels and mobile view

--- a/index.html
+++ b/index.html
@@ -239,12 +239,14 @@
 
             <div class="col text-right">
                 <div class="row-with-switch">
-                    <label for="toggle1"><code>application config: </code> dev</label>
+                    <p class="switch-title"><code>app config: </code></p>
+
+                    <label for="toggle1">dev</label>
                     <input type="checkbox" id="toggle1" class="toggle">
                     <label for="toggle1">prod</label>
 
                     <div class="row equal-cols">
-                        <div class="col-md-6 prod">
+                        <div class="col-md-6 on">
                             <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -269,7 +271,7 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 prod">
+                        <div class="col-md-6 on">
                             <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -292,7 +294,7 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 dev">
+                        <div class="col-md-6 off">
                             <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -317,7 +319,7 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 dev">
+                        <div class="col-md-6 off">
                             <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -344,13 +346,15 @@
                 </div>
                 <!--//////////////////////////////////////////////////////////////////////////-->
                 <div class="row-with-switch">
-                    <label for="toggle2"><code>deploy config: </code>dev</label>
+                    <p class="switch-title"><code>deploy config: </code></p>
+
+                    <label for="toggle2">dev</label>
                     <input type="checkbox" id="toggle2" class="toggle">
                     <label for="toggle2">prod</label>
 
                     <div class="row equal-cols">
 
-                        <div class="col-md-6 prod">
+                        <div class="col-md-6 on">
                             <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -368,7 +372,7 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 prod">
+                        <div class="col-md-6 on">
                             <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="language-yaml">
@@ -386,7 +390,7 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 dev">
+                        <div class="col-md-6 off">
                             <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -404,7 +408,7 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 dev">
+                        <div class="col-md-6 ">
                             <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                             <code class="lang-yaml">
@@ -425,7 +429,8 @@
                 </div>
                 <!--//////////////////////////////////////////////////////////////////////////-->
                 <div class="row-with-switch">
-                    <label for="toggle3"><code>log config: </code>dev</label>
+                    <p class="switch-title"><code>log config: </code></p>
+                    <label for="toggle3">dev</label>
                     <input type="checkbox" id="toggle3" class="toggle">
                     <label for="toggle3">prod</label>
 
@@ -445,7 +450,7 @@
                                  </code>
                             </pre>
                         </div>
-                        <div class="col-md-6 prod">
+                        <div class="col-md-6 on">
                             <p class="code-title"><code>payment-backend</code></p>
                             <pre>
                                 <code class="lang-xml">
@@ -476,7 +481,7 @@
                                  </code>
                             </pre>
                         </div>
-                        <div class="col-md-6 prod">
+                        <div class="col-md-6 on">
                             <p class="code-title"><code>payment-frontend</code></p>
                             <pre>
                                 <code class="lang-xml">
