Refactored features and index

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                     <div class="row equal-cols">
                         <div class="col-md-6 on">
-                            <p class="code-title"><code>payment-backend</code></p>
+                            <h3 class="code-title"><code>payment-backend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-backend
@@ -272,7 +272,7 @@
                         </div>
 
                         <div class="col-md-6 on">
-                            <p class="code-title"><code>payment-frontend</code></p>
+                            <h3 class="code-title"><code>payment-frontend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-frontend
@@ -295,7 +295,7 @@
                         </div>
 
                         <div class="col-md-6 off">
-                            <p class="code-title"><code>payment-backend</code></p>
+                            <h3 class="code-title"><code>payment-backend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-backend
@@ -320,7 +320,7 @@
                         </div>
 
                         <div class="col-md-6 off">
-                            <p class="code-title"><code>payment-frontend</code></p>
+                            <h3 class="code-title"><code>payment-frontend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 name: payment-frontend
@@ -355,7 +355,7 @@
                     <div class="row equal-cols">
 
                         <div class="col-md-6 on">
-                            <p class="code-title"><code>payment-backend</code></p>
+                            <h3 class="code-title"><code>payment-backend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 image: "payment-backend:1.5"
@@ -373,7 +373,7 @@
                         </div>
 
                         <div class="col-md-6 on">
-                            <p class="code-title"><code>payment-frontend</code></p>
+                            <h3 class="code-title"><code>payment-frontend</code></h3>
                             <pre>
                             <code class="language-yaml">
                                 image: "payment-frontend:2.1"
@@ -391,7 +391,7 @@
                         </div>
 
                         <div class="col-md-6 off">
-                            <p class="code-title"><code>payment-backend</code></p>
+                            <h3 class="code-title"><code>payment-backend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 image: "payment-backend:latest"
@@ -408,8 +408,8 @@
                         </pre>
                         </div>
 
-                        <div class="col-md-6 ">
-                            <p class="code-title"><code>payment-frontend</code></p>
+                        <div class="col-md-6 off">
+                            <h3 class="code-title"><code>payment-frontend</code></h3>
                             <pre>
                             <code class="lang-yaml">
                                 image: "payment-frontend:latest"
@@ -435,8 +435,8 @@
                     <label for="toggle3">prod</label>
 
                     <div class="row equal-cols">
-                        <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-backend</code></p>
+                        <div class="col-md-6 off">
+                            <h3 class="code-title"><code>payment-backend</code></h3>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
@@ -451,7 +451,7 @@
                             </pre>
                         </div>
                         <div class="col-md-6 on">
-                            <p class="code-title"><code>payment-backend</code></p>
+                            <h3 class="code-title"><code>payment-backend</code></h3>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
@@ -466,8 +466,8 @@
                             </pre>
                         </div>
 
-                        <div class="col-md-6 dev">
-                            <p class="code-title"><code>payment-frontend</code></p>
+                        <div class="col-md-6 off">
+                            <h3 class="code-title"><code>payment-frontend</code></h3>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
@@ -482,7 +482,7 @@
                             </pre>
                         </div>
                         <div class="col-md-6 on">
-                            <p class="code-title"><code>payment-frontend</code></p>
+                            <h3 class="code-title"><code>payment-frontend</code></h3>
                             <pre>
                                 <code class="lang-xml">
                                     &lt;configuration&gt;
