--- a/features.html
+++ b/features.html
@@ -202,8 +202,14 @@
                                           context: /api
 
                                         monitoring:
+                                          secure: false
                                           base-path: /monitoring
                                           endpoints: info, health, ready, prometheus
+
+                                        logging:
+                                          level:
+                                            ROOT: INFO
+                                            APP: DEBUG
                                         </code>
                                     </pre>
                                 </div>
@@ -219,8 +225,14 @@
                                           path: /api
 
                                         monitoring:
+                                          secure: true
                                           base-path: /monitoring
                                           endpoints: info, health, ready, prometheus
+
+                                        logging:
+                                          level:
+                                            ROOT: INFO
+                                            APP: DEBUG
                                         </code>
                                     </pre>
                                 </div>
@@ -235,7 +247,7 @@
                                           port: 8080
                                           context: /api
 
-                                        #include monitoring
+                                        #include monitoring, logging
                                         </code>
                                     </pre>
                                 </div>
@@ -250,21 +262,37 @@
                                           host: http://payment-backend.local
                                           path: /api
 
-                                        #include monitoring
+                                        #include monitoring, logging
+
+                                        monitoring:
+                                          secure: true
                                         </code>
                                     </pre>
                                 </div>
                             </div>
 
                             <div class="row equal-cols">
-                                <div class="col-md-12 col-lg-6 offset-lg-3 on">
+                                <div class="col-md-6 on">
                                     <h3 class="code-title"><code>monitoring</code></h3>
 
                                     <pre>
                                         <code class="language-yaml">
                                         monitoring:
+                                          secure: false
                                           base-path: /monitoring
                                           endpoints: info, health, ready, prometheus
+                                        </code>
+                                    </pre>
+                                </div>
+                                <div class="col-md-6  on">
+                                    <h3 class="code-title"><code>logging</code></h3>
+
+                                    <pre>
+                                        <code class="language-yaml">
+                                        logging:
+                                          level:
+                                            ROOT: INFO
+                                            APP: DEBUG
                                         </code>
                                     </pre>
                                 </div>
