--- a/download.html
+++ b/download.html
@@ -50,6 +50,7 @@
     <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud."
           name="description">
     <link href="vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/prism/prism.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="bloggersans/bloggersans.css" rel="stylesheet">
     <link rel="icon" href="css/favicon.ico">
@@ -57,128 +58,130 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light shadow-sm">
-            <div class="container">
-                <a href="./" class="navbar-brand">
-                    <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig" />
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="features.html">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
-                        </li>
-                        <li class="nav-item nav-active">
-                            <a class="nav-link text-dark" href="download.html">Download</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="documentation.html">Docs</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <a href="https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
-        <svg width="80" height="80" viewBox="0 0 250 250"
-             style="fill:#5fbb92; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100"
-             aria-hidden="true">
-            <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-            <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-                  fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-            <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-                  fill="currentColor" class="octo-body"></path>
-        </svg>
-    </a>
-
-    <main role="main" id="download">
-        <section class="jumbotron">
-            <div class="container">
-                <h1 class="text-center">Download</h1>
-                <br /><br /><br />
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-6">
-                            <h4 class="mc-green">Binary Cli</h4>
-                            <p class="lead">
-                                You can download Microconfig for your OS from <a class=""
-                                    href="https://github.com/microconfig/microconfig/releases">Github</a>.<br />
-                            </p>
-                            <br />
-                        </div>
-                        <div class="col-md-12 col-lg-6">
-                            <h4 class="mc-green">Homebrew</h4>
-                            <p class="lead">
-                                MacOS install with Homebrew coming soon...<br />
-                            </p>
-                            <br />
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-6">
-                            <h4 class="mc-green">Jar Cli</h4>
-                            <p class="lead">
-                                You can download Microconfig executable jar from <a class=""
-                                    href="https://github.com/microconfig/microconfig/releases">Github</a>
-                                or
-                                <a class=""
-                                    href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven
-                                    Central</a>.
-                            </p>
-                            <br />
-                        </div>
-                        <div class="col-md-12 col-lg-6">
-                            <h4 class="mc-green">Core Jar</h4>
-                            <p class="lead">
-                                If you want to add Microconfig-core as a dependency to your Java project use
-                                <a class=""
-                                    href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
-                            </p>
-                            <br />
-                        </div>
-                    </div>
-                </div>
-                <br /><br />
-
-                <h4 class="text-center mc-green">How-To</h4>
-                <p class="lead text-center">
-                    Check out <a class="" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
-                </p>
-            </div>
-        </section>
-
-    </main>
-
-    <footer class="text-muted bg-light">
-        <div class="container footer-container">
-            <p class="copyright">Microconfig.io &copy; 2017-2020</p>
-
-            <div class="contacts">
-                <ul class="list-unstyled mb-0">
-                    <li class="lead">Join our
-                        <a
-                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
+<header>
+    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
+        <div class="container">
+            <a href="./" class="navbar-brand">
+                <img style="height: 97px;" src="images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="features.html">Features</a>
                     </li>
-                    <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
-                    <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="quickstart.html">Quickstart</a>
+                    </li>
+                    <li class="nav-item nav-active">
+                        <a class="nav-link text-dark" href="download.html">Download</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="plugin.html">IDE plugin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="documentation.html">Docs</a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </footer>
+    </nav>
+</header>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
+<a href="https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
+    <svg width="80" height="80" viewBox="0 0 250 250"
+         style="fill:#5fbb92; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100"
+         aria-hidden="true">
+        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+        <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+              fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+        <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+              fill="currentColor" class="octo-body"></path>
+    </svg>
+</a>
+
+<main role="main" id="download">
+    <section class="jumbotron">
+        <div class="container">
+            <h1 class="text-center">Download</h1>
+            <br/><br/><br/>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Binary Cli</h4>
+                        <p class="lead">
+                            You can download Microconfig for your OS from <a class=""
+                                                                             href="https://github.com/microconfig/microconfig/releases">Github</a>.<br/>
+                        </p>
+                        <br/>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Homebrew</h4>
+                        <pre><code class="language-none">
+                            brew tap microconfig/microconfig
+                            brew install microconfig
+                        </code></pre>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Jar Cli</h4>
+                        <p class="lead">
+                            You can download Microconfig executable jar from <a class=""
+                                                                                href="https://github.com/microconfig/microconfig/releases">Github</a>
+                            or
+                            <a class=""
+                               href="https://search.maven.org/artifact/io.microconfig/microconfig-cli/">Maven
+                                Central</a>.
+                        </p>
+                        <br/>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <h4 class="mc-green">Core Jar</h4>
+                        <p class="lead">
+                            If you want to add Microconfig-core as a dependency to your Java project use
+                            <a class=""
+                               href="https://search.maven.org/artifact/io.microconfig/microconfig-core/">microconfig-core</a>.
+                        </p>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+            <br/><br/>
+
+            <h4 class="text-center mc-green">How-To</h4>
+            <p class="lead text-center">
+                Check out <a class="" href="quickstart.html">quickstart</a> to learn how to use Microconfig.
+            </p>
+        </div>
+    </section>
+
+</main>
+
+<footer class="text-muted bg-light">
+    <div class="container footer-container">
+        <p class="copyright">Microconfig.io &copy; 2017-2020</p>
+
+        <div class="contacts">
+            <ul class="list-unstyled mb-0">
+                <li class="lead">Join our
+                    <a
+                            href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
+                </li>
+                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
+                <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="vendor/prism/prism.js"></script>
 </body>
 </html>
