--- a/download.html
+++ b/download.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Homebrew</h4>
-                        <pre><code class="language-none">
+                        <pre><code class="pre-console">
                             brew tap microconfig/microconfig
                             brew install microconfig
                         </code></pre>
