added homebrew install

--- a/download.html
+++ b/download.html
@@ -119,9 +119,10 @@
                     </div>
                     <div class="col-md-12 col-lg-6">
                         <h4 class="mc-green">Homebrew</h4>
-                        <pre><code class="pre-console">brew tap microconfig/microconfig
+                        <code style="color: black" >
+                            brew tap microconfig/microconfig<br/>
                             brew install microconfig
-                        </code></pre>
+                        </code>
                         <br/>
                     </div>
                 </div>
