Add setting height for all blocks except mixed row(common,off,on)

--- a/features.html
+++ b/features.html
@@ -193,7 +193,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-backend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-backend
 
@@ -216,7 +216,7 @@
 
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-frontend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -239,7 +239,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>payment-backend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-backend
 
@@ -254,7 +254,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>payment-frontend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -274,8 +274,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>monitoring</code></h3>
-
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         monitoring:
                                           secure: false
@@ -284,10 +283,10 @@
                                         </code>
                                     </pre>
                                 </div>
-                                <div class="col-md-6  on">
-                                    <h3 class="code-title"><code>logging</code></h3>
 
-                                    <pre>
+                                <div class="col-md-6 on">
+                                    <h3 class="code-title"><code>logging</code></h3>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         logging:
                                           level:
@@ -329,14 +328,14 @@
 
                         <!-- <div class="col"> -->
                         <div class="row-with-switch">
-                            <label for="toggle1">Problem</label>
-                            <input type="checkbox" id="toggle1" class="toggle" checked>
-                            <label for="toggle1">Solution</label>
+                            <label for="toggle-ref">Problem</label>
+                            <input type="checkbox" id="toggle-ref" class="toggle" checked>
+                            <label for="toggle-ref">Solution</label>
 
                             <div class="row equal-cols">
                                 <div class="col-md-6">
                                     <h3 class="code-title"><code>payment-backend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-backend
 
@@ -351,7 +350,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>payment-frontend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -366,7 +365,7 @@
 
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-frontend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -411,7 +410,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-12 off">
                                     <h3 class="code-title"><code>payment-frontend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -428,7 +427,7 @@
 
                                 <div class="col-md-12 on">
                                     <h3 class="code-title"><code>payment-frontend</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -481,7 +480,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-backend dev</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-backend
 
@@ -499,7 +498,7 @@
 
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-backend prod</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-backend
 
@@ -517,7 +516,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>payment-backend/application.dev.yaml</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         payment-gateway: http://gateway-mock.local
 
@@ -529,7 +528,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>payment-backend/application.prod.yaml</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         payment-gateway: https://payment-gateway.com
 
@@ -544,7 +543,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-12 col-lg-6 offset-lg-3 on">
                                     <h3 class="code-title"><code>payment-backend/application.yaml</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-backend
 
@@ -595,7 +594,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-backend log config dev</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="lang-xml">
                                         &lt;configuration&gt;
                                           &lt;appender class="FileAppender"&gt;
@@ -611,7 +610,7 @@
 
                                 <div class="col-md-6 off">
                                     <h3 class="code-title"><code>payment-backend log config prod</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="lang-xml">
                                         &lt;configuration&gt;
                                           &lt;appender class="FileAppender"&gt;
@@ -634,7 +633,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>log template.xml</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-xml">
                                         &lt;configuration&gt;
                                           &lt;appender class="FileAppender"&gt;
@@ -659,7 +658,7 @@
 
                                 <div class="col-md-6 on">
                                     <h3 class="code-title"><code>payment-backend prod</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         mc.mustache.log:
                                           fromFile: ${log@configDir}/template.xml
@@ -672,7 +671,6 @@
                                         </code>
                                     </pre>
                                 </div>
-
                             </div>
                         </div>
                         <!-- </div> -->
@@ -709,9 +707,9 @@
                             <label for="toggle-diff">Solution</label>
 
                             <div class="row equal-cols">
-                                <div class="col-md-6">
+                                <div class="col-md-6 common">
                                     <h3 class="code-title"><code>payment-frontend v1</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -732,9 +730,9 @@
                                     </pre>
                                 </div>
 
-                                <div class="col-md-6">
+                                <div class="col-md-6 common">
                                     <h3 class="code-title"><code>payment-frontend v2</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         name: payment-frontend
 
@@ -757,7 +755,7 @@
                             <div class="row equal-cols">
                                 <div class="col-md-12 col-lg-6 offset-lg-3 on">
                                     <h3 class="code-title"><code>payment-frontend diff between v1 and v2</code></h3>
-                                    <pre>
+                                    <pre class="code-block">
                                         <code class="language-yaml">
                                         +payment-backend:
                                           timeoutMs: 180000
@@ -804,6 +802,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="vendor/prism/prism.js"></script>
+    <script async src="script/setCodeBlockHeight.js"></script>
 </body>
 
 </html>
